// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering after user loaded 1`] = `
<div>
  <form
    data-test="changePasswordForm"
  >
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        New Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </form>
</div>
`;

exports[`Saving blank fields 1`] = `
<div>
  <form
    data-test="changePasswordForm"
  >
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        New Password
      </label>
      <input
        class="form-control is-invalid"
        id="password"
        name="password"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a password
      </div>
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please re-enter the password
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </form>
</div>
`;

exports[`Saving mismatched passwords 1`] = `
<div>
  <form
    data-test="changePasswordForm"
  >
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        New Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Passwords do not match
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </form>
</div>
`;

exports[`Saving successfully 1`] = `
<div>
  <form
    data-test="changePasswordForm"
  >
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        New Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Change Password
      </button>
    </div>
    <div
      class="form-group"
    >
      <div
        class="alert alert-success"
        role="alert"
      >
        Password changed successfully
      </div>
    </div>
  </form>
</div>
`;

exports[`Saving with an unexpected error 1`] = `
<div>
  <form
    data-test="changePasswordForm"
  >
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        New Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Change Password
      </button>
    </div>
    <div
      class="form-group"
    >
      <div
        class="alert alert-danger"
        role="alert"
      >
        An unexpected error occurred: Error: Network error
      </div>
    </div>
  </form>
</div>
`;
